--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ data/
 todo.MD
 foliumassets.ipnyp
 _local_mongodriver_backups/*
+local_dev/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.__pycache__/
