--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = "^2.9.1"
 rich = "^13.8.1"
 pymongo = "^4.8.0"
 shapely = "^2.0.6"
+sqlalchemy = "^2.0.34"
 
 
 [tool.poetry.group.dev.dependencies]
