--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -1,40 +1,27 @@
-name: Codecov Upload
+name: Run tests and upload coverage
 
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: push
 
 jobs:
-  codecov:
+  test:
+    name: Run tests and collect coverage
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: ['3.9', '3.10']
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - name: Checkout
+      uses: actions/checkout@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        fetch-depth: 0
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
+      run: pip install pytest pytest-cov
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Run tests
+      run: pytest --cov --cov-report=xml
+
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v4
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}  
-        files: ./coverage.xml 
-        flags: unittests
-        name: codecov-coverage
+        token: ${{ secrets.CODECOV_TOKEN }}
