--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ rich = "^13.8.1"
 pymongo = "^4.8.0"
 shapely = "^2.0.6"
 sqlalchemy = "^2.0.34"
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
