--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,3 +28,8 @@ jobs:
     - name: Run tests
       run: |
         poetry run pytest  --cov --cov-report=xml
+
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
